--- a/style.css
+++ b/style.css
@@ -1,3 +1,32 @@
-body{
-    background-color: red;
+.bank_tittle {
+    text-align: center;
+    margin-top: 200px;
+    color: white;
+    text-shadow: black 2px 2px 10px;
+}
+.bank_login_area{
+    border-radius: 5px;
+    padding: 20px 30px;
+    box-shadow: black 2px 2px 7px;
+    margin-top: 30px;
+}
+.my_btn{
+    border-radius: 4px;
+    color:white;
+    border: none;
+    padding: 5px 10px;
+}
+/* /////// templary display none ///// */
+#login_page{
+    display: none;
+}
+
+.tangition_area h1, .tangition_area h4{
+    text-align: center;
+
+}
+.tangition-part{
+    padding: 20px 0px !important;
+    margin-top: 100px;
+    border-radius: 10px;
 }
