--- a/style.css
+++ b/style.css
@@ -16,17 +16,38 @@
     border: none;
     padding: 5px 10px;
 }
-/* /////// templary display none ///// */
-#login_page{
+#tangition{
     display: none;
 }
-
 .tangition_area h1, .tangition_area h4{
     text-align: center;
 
 }
 .tangition-part{
     padding: 20px 0px !important;
-    margin-top: 100px;
+    margin-top: 130px;
     border-radius: 10px;
+}
+.withdraw_tittle{
+    text-align: center;
+    margin-bottom: 20px;
+    color: white;
+    text-shadow: black 2px 2px 10px;
+}
+.withdraw_area{
+    border-radius: 5px;
+    padding: 20px 30px;
+    box-shadow: black 2px 2px 7px;
+    margin-top: 80px; 
+    margin-bottom: 100px;
+    display: none;
+    background: rgb(223, 185, 185);
+}
+.deposit_area{
+    border-radius: 5px;
+    padding: 20px 30px;
+    box-shadow: black 2px 2px 7px;
+    margin-top: 80px; 
+    margin-bottom: 100px;
+    background: rgb(215, 236, 208);
 }
